site.css
/*colors
#343434 - dark grey
#FFDD66 - yellow

*/


@import 'normalize.css';



/* ---basic bitches---*/
html, body {
	min-height: 100%;
	background-color: #fff;
}

body, a, dt, p, h1 {
	font-family: 'Exo 2', sans-serif, verdana;
	font-weight: 200;
	font-size: 1.5em;
	line-height: 1.5em;
	display: block;
	color: #343434;
}

dt, a {
	text-decoration: none;
}

a {
	-webkit-transition: color 0.2s ease-in;
   -moz-transition: color 0.2s ease-in;
   -o-transition: color 0.2s ease-in;
   -ms-transition: color 0.2s ease-in;
   transition: color 0.2s ease-in;
}

a:hover {
	color: #FFDD66;
}

dd {
	font-size: 0.8em;
	line-height: 0.8em;
	padding-bottom: 10px;
	position: absolute;
	text-align: left;
	left: 306px;
	width: 320px;
	margin-top: -32px;
	opacity: 0;
	color: #7c7c7c;
    -webkit-transition: opacity 0.3s ease-in;
   -moz-transition: opacity 0.3s ease-in;
   -o-transition: opacity 0.3s ease-in;
   -ms-transition: opacity 0.3s ease-in;
   transition: opacity 0.3s ease-in;

}

dt:hover + dd {
	opacity: 1;
	display: block;
}

p {
	font-size: 0.8em;
}

footer {
	background-color: #fff;
	padding: 30px 0 60px;
	text-align: center;
	margin: 0 auto;
}


/* ---utilities---*/


#cornertab {
	height: 0;
	width: 300px;
	border-right: 60px solid transparent;
	border-bottom: 60px solid transparent;
	border-top: 60px solid #FFDD66;
	position: fixed;
	top: 0;
	left: -300px;
	  -webkit-transition: left 0.3s ease-in;
   -moz-transition: left 0.3s ease-in;
   -o-transition: left 0.3s ease-in;
   -ms-transition: left 0.3s ease-in;
   transition: left 0.3s ease-in;
}

#cornertab p {
	top: -55px;
	left: 25px;
	position: relative;
}

#cornertab:hover {
	left: 0;
}


#math {
	height: 100vh;
}

#math > div {
	text-align: right;
	margin: 0 auto;
	width: 300px;
	position: relative;
	top: 50%;
  	transform: translateY(-50%);
  }

#gooddesign {
	border-top: 2px solid #343434;
	margin-top: 10px;
	font-size: 1.8em;
}


#plus {
	text-align: left;
	float: left;
}

#portfolio {
	background-color: #e4e4e4;
	border-top: 16px solid #FFDD66;
	border-bottom: 16px solid #FFDD66;
	overflow: auto;

}

.center {
	margin: 10px auto;
	max-width: 1280px;
}

.info-block, .img-block {
	float: left;
	margin: 10px;
}

.info-block {
	width: 240px;
	height: 240px;
	background-color: #ffffff;
	padding: 30px;
}

.img-block {
	width: 300px;
	height: 300px;
	overflow: hidden;
	background-color: #fff;
}

.img-block:hover {
	box-sizing: border-box;
	border: 3px solid #FFDD66;
}

/*portfolio images*/


/*identity*/

#ramblen {
	width: 620px;
	background-image: url('images/ramblen.jpg');
	background-position: 0 center;
	background-size: 600px;
	background-repeat: no-repeat;
}

 
#tv {
	background-image: url('images/tv.jpg');
	background-position: center -60px;
	background-size: 400px;
}

#aea {
	background-image: url('images/AEA-10.png');
	background-size: 260px;
	background-position: center;
	background-repeat: no-repeat;
}

/*interactive*/
#shift-mac {
	background-image: url('images/shift_mac.jpg');
	background-position: center;
}

#zm {
	background-image: url('images/zm.jpg');
	background-position: center;
}

#tidbitts {
	background-image: url('images/tidbitts.jpg');
	background-position: center -2px;
	background-size: 622px;
	width: 620px;
}

/*print*/
#strive {
	background-image: url('images/strive.jpg');
	background-position: center -60px;
}

/*illustration*/
#phones {
	background-image: url('images/phones.jpg');
	background-position: center;
}

#vectorme {
	background-image: url('images/vectorme.jpg');
	background-position: -180px -60px;
}

#coc {
	background-image: url('images/cocmenu.jpg');
	background-size: 300px;
}

/*modal*/

.modalDialog {
	height: 100vh;
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(0,0,0,0.8);
	z-index: 99999;
	opacity:0;
	-webkit-transition: opacity 400ms ease-in;
	-moz-transition: opacity 400ms ease-in;
	transition: opacity 400ms ease-in;
	pointer-events: none;
}

.modalDialog:target {
	opacity:1;
	pointer-events: auto;
}

.modalDialog > div {
	width: 80vw;
	height: 80vh;
	border: 3px solid #FFDD66;
	position: relative;
	margin: 0 auto;
	padding: 60px;
	background: #fff;
	top: 50%;
  	transform: translateY(-50%);
  	overflow: scroll;
}

.modalDialog > div > img {
	display: block;
	margin: 0 auto;
	width: 80vw;
	}

.close {
	color: #343434;
	position: absolute;
	right: 8px;
	text-align: center;
	top: -8px;
	text-decoration: none;
}

